--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,7 @@ jobs:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
       - run: mvn clean package
+      - run: mvn test integration-tests
       - save_cache:
           paths:
             - ~/.m2
