--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,8 +16,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: mvn clean package
-      - run: mvn test integration-tests
+      - run: mvn clean package integration-test
       - save_cache:
           paths:
             - ~/.m2
