--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<skipTests>false</skipTests>
 	</properties>
 
 	<dependencies>
@@ -113,6 +114,12 @@
 						<goals>
 							<goal>sign</goal>
 						</goals>
+                        <configuration>
+                            <gpgArguments>
+                                <arg>--pinentry-mode</arg>
+                                <arg>loopback</arg>
+                            </gpgArguments>
+                        </configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -131,7 +138,7 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<skipTests>true</skipTests>
+					<skipTests>${skipTests}</skipTests>
 					<reuseForks>true</reuseForks>
 					<useSystemClassLoader>false</useSystemClassLoader>
 				</configuration>
@@ -143,7 +150,7 @@
 							<goal>test</goal>
 						</goals>
 						<configuration>
-							<skipTests>false</skipTests>
+							<skipTests>${skipTests}</skipTests>
 							<includes>
 								<include>**/*Test.java</include>
 							</includes>
@@ -158,7 +165,7 @@
 							<goal>test</goal>
 						</goals>
 						<configuration>
-							<skipTests>false</skipTests>
+							<skipTests>${skipTests}</skipTests>
 							<includes>
 								<include>**/*IT.*</include>
 							</includes>
