--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
 					</execution>
 				</executions>
 				<configuration>
+					<quiet>true</quiet>
 					<additionalOptions>
 						<additionalOption>-Xdoclint:none</additionalOption>
 					</additionalOptions>
