--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ jobs:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
       - run: echo $GPG_ASC_BASE64 | base64 --decode | gpg --batch --no-tty --import --yes
-      - run: mvn -s .circleci/maven.settings.xml deploy
+      - run: mvn -s .circleci/maven.settings.xml clean deploy -DskipTests
       - save_cache:
           paths:
             - ~/.m2
