--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,11 @@
 			<artifactId>guava</artifactId>
 			<version>28.1-jre</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.ws</groupId>
+			<artifactId>spring-ws-core</artifactId>
+			<version>3.0.8.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<build>
