Fix tests to work with SpringBoot

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,17 +1,73 @@
 checkmarx:
-#  version: 9.0
-#  scope: access_control_api sast_rest_api
-  username: xxxxx
-  password: xxxxx
-  client-secret: 014DF517-39D1-4453-B7B3-9930C563627C
-  base-url: xxxxx
-  multi-tenant: true
+  version: 8.9
+  username: xxx
+  password: xxx
+  client-secret: xxx
+  base-url: http://example.com
+  multi-tenant: false
   configuration: Default Configuration
   scan-preset: Checkmarx Default
-  team: \CxServer\SP\Checkmarx
+  team: /CxServer/SP/Company
+  #9.0  
+  #  team: /CxServer/SP/Company
   url: ${checkmarx.base-url}/cxrestapi
   #preserve-xml: true
   #incremental: true
-#WSDL Config
+  #WSDL Config
   portal-url: ${checkmarx.base-url}/cxwebinterface/Portal/CxWebService.asmx
+  #team-script:
+  #project-script:
 
+ast:
+  apiUrl: http://example.com
+  webAppUrl: ${ast.apiUrl}
+  clientId: CxFlow
+  clientSecret: xxx
+  preset: Checkmarx Default
+  incremental: false
+
+cxgo:
+  client-secret: xxx
+  base-url: https://example.net
+  portal-url: https://example.net
+  # CxOD Business unit that will contain the project/application/scan
+  team: \Demo\CxFlow
+  url: ${cxgo.base-url}
+  multi-tenant: true
+  configuration: Default Configuration
+  #
+  ## Available Scan defaults
+  #
+  #   - CXOD_MOBILE_NATIVE = 1;
+  #   - CXOD_MOBILE_WEB_BASED = 2;
+  #   - CXOD_DESKTOP_NATIVE = 3;
+  #   - CXOD_DESKTOP_WEB = 4;
+  #   - CXOD_API = 5;
+  #   - CXOD_FRONTEND = 6;
+  #   - CXOD_BACKEND = 7;
+  #   - CXOD_LAMBDA = 8;
+  #   - CXOD_CLI = 9;
+  #   - CXOD_SERVICE = 10;
+  #   - CXOD_SMART_DEVICE = 11;
+  #   - CXOD_OTHER = 12;
+  scan-preset: 1,2,3,4,5,9
+  sca:
+    filter-severity:
+      - High
+    #      - Medium
+    filter-score: 5.0
+  filter-severity:
+    - High
+    - Medium
+    - Low
+sca:
+  appUrl: https://example.com
+  apiUrl: https://example.com
+  accessControlUrl: https://example.net
+  tenant: cxflow
+  username: xxx
+  password: xxx
+
+github:
+  token: xxx
+  url: https://github.com/myrepo
