--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,22 +1,19 @@
 checkmarx:
-  version: 8.9
-  username: xxx
-  password: xxx
-  client-secret: xxx
-  base-url: http://example.com
-  multi-tenant: false
+  #  version: 9.0
+  #  scope: access_control_api sast_rest_api
+  username: xxxxx
+  password: xxxxx
+  client-secret: 014DF517-39D1-4453-B7B3-9930C563627C
+  base-url: xxxxx
+  multi-tenant: true
   configuration: Default Configuration
   scan-preset: Checkmarx Default
-  team: /CxServer/SP/Company
-  #9.0  
-  #  team: /CxServer/SP/Company
+  team: \CxServer\SP\Checkmarx
   url: ${checkmarx.base-url}/cxrestapi
   #preserve-xml: true
   #incremental: true
   #WSDL Config
   portal-url: ${checkmarx.base-url}/cxwebinterface/Portal/CxWebService.asmx
-  #team-script:
-  #project-script:
 
 ast:
   apiUrl: http://example.com
