--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,8 @@ jobs:
       - run:
           name: "Publish Release on GitHub"
           command: |
-            go get github.com/cxflowtestuser/ghr
+            go get github.com/cxflowtestuser/ghr 
+            go get github.com/google/go-github/v47/github
             VERSION=$(cat ./target/version.txt)
             rm ./target/version.txt
             ghr -t ${GITHUB_TOKEN_CXFLOW} -u ${CIRCLE_PROJECT_USERNAME} -n ${VERSION} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION} ./target/
