--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $GPG_ASC_BASE64 | base64 --decode | gpg --generate-key
+      - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --version --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean verify -DskipTests
       - run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout > target/version.txt
@@ -40,7 +40,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $GPG_ASC_BASE64 | base64 --decode | gpg --version --batch --no-tty --import --yes
+      - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --version --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean deploy -DskipTests
       - save_cache:
