--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --batch --no-tty
+      - run: echo $GPG_ASC_BASE64 | base64 --decode | gpg --batch --no-tty
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean verify -X
       - run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout > target/version.txt
