--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $GPG_ASC_BASE64NEW | base64 --decode |  gpg --version --batch --no-tty --import --yes
+      - run: echo $GPG_ASC_BASE64NEW | base64 --decode |  gpg --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean verify -X
       - run: mvn help:evaluate -Dexpression=project.version -q -DforceStdout > target/version.txt
@@ -42,7 +42,7 @@ jobs:
           keys:
             - v1-dependencies-{{ checksum "pom.xml" }}
             - v1-dependencies-
-      - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --version --batch --no-tty --import --yes
+      - run: echo $GPG_ASC_BASE64NEW | base64 --decode | gpg --batch --no-tty --import --yes
       - run: chmod u+x mvnw
       - run: ./mvnw -s .circleci/maven.settings.xml clean deploy -DskipTests
       - save_cache:
